fixed scroll issue. Need to remove grid row on small screens

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 * {
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   font-family: "Roboto", sans-serif;
 }
 
@@ -20,14 +20,6 @@ body {
 }
 
 /* side nav bar */
-
-.scroll {
-  overflow-y: auto;
-  height: auto;
-  /* max-height:200px; */
-  border: 1px solid black;
-  /* width:300px; */
-}
 
 nav {
   width: 16vw;
@@ -133,7 +125,7 @@ nav.active {
 
 header {
   padding-top: 5px;
-  background-color: whitesmoke;
+  background-color: white;
   width: 84vw;
   position: fixed;
   right: 0;
@@ -272,6 +264,12 @@ header {
 
 /* projects grid */
 
+main {
+  margin-left: 55px;
+  overflow-y: auto;
+  max-height: 700px;
+}
+
 h3 {
   margin-bottom: 5px;
   text-align: center;
@@ -279,7 +277,7 @@ h3 {
 
 .parent-projects {
   display: grid;
-  margin: 0%;
+  margin: 0 auto;
   padding: 0;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -288,9 +286,18 @@ h3 {
   text-align: center;
 }
 
+.parent-projects div {
+  border: var(--orange) 3px solid;
+}
+
 .parent-projects p {
   font-size: smaller;
   margin: 0;
+}
+
+.parent-projects a {
+  font-size: smaller;
+  color: var(--blue);
 }
 
 .parent-projects img {
@@ -306,18 +313,28 @@ h3 {
 }
 
 .div2p {
+  display: flex;
+  flex-direction: column;
   grid-area: 1 / 2 / 2 / 3;
 }
 .div3p {
+  display: flex;
+  flex-direction: column;
   grid-area: 2 / 1 / 3 / 2;
 }
 .div4p {
+  display: flex;
+  flex-direction: column;
   grid-area: 2 / 2 / 3 / 3;
 }
 .div5p {
+  display: flex;
+  flex-direction: column;
   grid-area: 3 / 1 / 4 / 2;
 }
 .div6p {
+  display: flex;
+  flex-direction: column;
   grid-area: 3 / 2 / 4 / 3;
 }
 
@@ -356,11 +373,21 @@ h3 {
   }
 
   main {
+    background-color: whitesmoke;
     width: calc(100vw - 55px);
+    max-height: 750px;
     padding-top: 150px;
-    position: fixed;
     right: 0;
     padding-left: 5px;
+    overflow-y: auto;
+  }
+
+  .parent-projects img {
+    width: 30vw;
+  }
+
+  body {
+    overflow: auto;
   }
 
   .myButton {
